{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 139,
  "lineage": "33cd1fbd-6545-3d9c-efd9-97a55216f417",
  "resources": [
    {
      "module": "module.firewall_rule_icmp_public",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-03-04T10:21:56.390-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vm-test-341412/global/firewalls/access-public-vm",
            "log_config": [],
            "name": "access-public-vm",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "priority": 1000,
            "project": "vm-test-341412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/firewalls/access-public-vm",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rule_private_vm",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-03-04T10:21:56.545-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vm-test-341412/global/firewalls/private-vm",
            "log_config": [],
            "name": "private-vm",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "priority": 1000,
            "project": "vm-test-341412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/firewalls/private-vm",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "db",
              "ncu-analysis-vm",
              "ncu-vm",
              "saas-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rule_public_ssh_all",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-04T10:21:56.411-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vm-test-341412/global/firewalls/ssh-all-public-instances",
            "log_config": [],
            "name": "ssh-all-public-instances",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "priority": 1000,
            "project": "vm-test-341412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/firewalls/ssh-all-public-instances",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer-backend",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/instanceGroups/web-tier-asia-northeast3",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 1,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-03-04T10:23:38.722-08:00",
            "enable_cdn": false,
            "fingerprint": "aNwDZ1Bym8I=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/httpHealthChecks/hc-asia-northeast3"
            ],
            "id": "projects/vm-test-341412/global/backendServices/vm-test-341412",
            "load_balancing_scheme": "EXTERNAL",
            "name": "vm-test-341412",
            "port_name": "http",
            "project": "vm-test-341412",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/backendServices/vm-test-341412",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.instance-groups.google_compute_region_instance_group_manager.this",
            "module.instance-templates.google_compute_instance_template.this",
            "module.load-balancer-health-check.google_compute_http_health_check.this",
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork",
            "module.router-nat.google_compute_router_nat.this",
            "module.router.google_compute_router.this"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer-external",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-04T10:24:00.678-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/backendServices/vm-test-341412",
            "default_url_redirect": [],
            "description": "vm-test-341412 Load Balancer",
            "fingerprint": "-PC_BiLY5Co=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/vm-test-341412/global/urlMaps/vm-test-341412",
            "map_id": 6051355021940877231,
            "name": "vm-test-341412",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/backendServices/vm-test-341412",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/backendServices/vm-test-341412",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "vm-test-341412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/urlMaps/vm-test-341412",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance-groups.google_compute_region_instance_group_manager.this",
            "module.instance-templates.google_compute_instance_template.this",
            "module.load-balancer-backend.google_compute_backend_service.this",
            "module.load-balancer-health-check.google_compute_http_health_check.this",
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork",
            "module.router-nat.google_compute_router_nat.this",
            "module.router.google_compute_router.this"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer-frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/vm-test-341412/global/forwardingRules/vm-test-341412",
            "ip_address": "34.149.9.204",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "vm-test-341412",
            "port_range": "80",
            "project": "vm-test-341412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/forwardingRules/vm-test-341412",
            "target": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/targetHttpProxies/vm-test-341412"
          },
          "dependencies": [
            "module.instance-groups.google_compute_region_instance_group_manager.this",
            "module.instance-templates.google_compute_instance_template.this",
            "module.load-balancer-backend.google_compute_backend_service.this",
            "module.load-balancer-external.google_compute_url_map.this",
            "module.load-balancer-health-check.google_compute_http_health_check.this",
            "module.load-balancer-target-http-proxy.google_compute_target_http_proxy.this",
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork",
            "module.router-nat.google_compute_router_nat.this",
            "module.router.google_compute_router.this"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer-target-http-proxy",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-04T10:24:11.976-08:00",
            "description": "vm-test-341412 Load Balancer",
            "id": "projects/vm-test-341412/global/targetHttpProxies/vm-test-341412",
            "name": "vm-test-341412",
            "project": "vm-test-341412",
            "proxy_bind": false,
            "proxy_id": 1808231825199327140,
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/targetHttpProxies/vm-test-341412",
            "url_map": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/urlMaps/vm-test-341412"
          },
          "dependencies": [
            "module.instance-groups.google_compute_region_instance_group_manager.this",
            "module.instance-templates.google_compute_instance_template.this",
            "module.load-balancer-backend.google_compute_backend_service.this",
            "module.load-balancer-external.google_compute_url_map.this",
            "module.load-balancer-health-check.google_compute_http_health_check.this",
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork",
            "module.router-nat.google_compute_router_nat.this",
            "module.router.google_compute_router.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/vm-test-341412/global/networks/network",
            "mtu": 0,
            "name": "network",
            "project": "vm-test-341412",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "virtual-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-b/disks/saas-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vm-test-341412/zones/asia-northeast3-b/instances/saas-vm",
            "instance_id": "3456016231835887155",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "Name": "private_vm"
            },
            "metadata_fingerprint": "QOsRn_vQB94=",
            "name": "saas-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.253.165",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
                "network_ip": "10.10.20.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/subnetworks/private-subnetwork",
                "subnetwork_project": "vm-test-341412"
              }
            ],
            "project": "vm-test-341412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-b/instances/saas-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "saas-vm",
              "test"
            ],
            "tags_fingerprint": "bA0j5jyMY_Y=",
            "zone": "asia-northeast3-b"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "virtual-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-b/disks/ncu-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vm-test-341412/zones/asia-northeast3-b/instances/ncu-vm",
            "instance_id": "7587979082182157875",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "Name": "private_vm"
            },
            "metadata_fingerprint": "QOsRn_vQB94=",
            "name": "ncu-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.208.100",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
                "network_ip": "10.10.20.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/subnetworks/private-subnetwork",
                "subnetwork_project": "vm-test-341412"
              }
            ],
            "project": "vm-test-341412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-b/instances/ncu-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ncu-vm",
              "test"
            ],
            "tags_fingerprint": "BJ3F37LmtL0=",
            "zone": "asia-northeast3-b"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance3",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "virtual-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-b/disks/ncu-analysis-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vm-test-341412/zones/asia-northeast3-b/instances/ncu-analysis-vm",
            "instance_id": "6915360652140734003",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "Name": "private_vm"
            },
            "metadata_fingerprint": "QOsRn_vQB94=",
            "name": "ncu-analysis-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.90.207",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
                "network_ip": "10.10.20.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/subnetworks/private-subnetwork",
                "subnetwork_project": "vm-test-341412"
              }
            ],
            "project": "vm-test-341412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-b/instances/ncu-analysis-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ncu-analysis-vm",
              "test"
            ],
            "tags_fingerprint": "lkMTQvkxYJk=",
            "zone": "asia-northeast3-b"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-04T10:21:57.605-08:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/vm-test-341412/regions/asia-northeast3/subnetworks/private-subnetwork",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "private-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "vm-test-341412",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/subnetworks/private-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-04T10:21:57.271-08:00",
            "gateway_address": "10.10.30.1",
            "id": "projects/vm-test-341412/regions/asia-northeast3/subnetworks/private-subnetwork2",
            "ip_cidr_range": "10.10.30.0/24",
            "name": "private-subnetwork2",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "vm-test-341412",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/subnetworks/private-subnetwork2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.private_vm_db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "virtual-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-c/disks/db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vm-test-341412/zones/asia-northeast3-c/instances/db",
            "instance_id": "5559573694521534003",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "Name": "private_vm"
            },
            "metadata_fingerprint": "QOsRn_vQB94=",
            "name": "db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.234.221",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
                "network_ip": "10.10.30.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/subnetworks/private-subnetwork2",
                "subnetwork_project": "vm-test-341412"
              }
            ],
            "project": "vm-test-341412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-c/instances/db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db",
              "test"
            ],
            "tags_fingerprint": "abs9xlDradU=",
            "zone": "asia-northeast3-c"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.private_subnet2.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.public_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "virtual-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-a/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vm-test-341412/zones/asia-northeast3-a/instances/bastion",
            "instance_id": "1828545684774577715",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "Name": "public_vm"
            },
            "metadata_fingerprint": "vYZ97Wpvj0Y=",
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.209.27",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
                "network_ip": "10.10.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/subnetworks/public-subnetwork",
                "subnetwork_project": "vm-test-341412"
              }
            ],
            "project": "vm-test-341412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/asia-northeast3-a/instances/bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion",
              "test"
            ],
            "tags_fingerprint": "tzmRnCzEjMg=",
            "zone": "asia-northeast3-a"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.public_subnet.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-04T10:21:57.102-08:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/vm-test-341412/regions/asia-northeast3/subnetworks/public-subnetwork",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "public-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "vm-test-341412",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/subnetworks/public-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.router",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2022-03-04T10:22:19.864-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/vm-test-341412/regions/asia-northeast3/routers/router-asia-northeast3",
            "name": "router-asia-northeast3",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "project": "vm-test-341412",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/asia-northeast3/routers/router-asia-northeast3"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.router-nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "vm-test-341412/asia-northeast3/router-asia-northeast3/router-nat-asia-northeast3",
            "log_config": [
              {
                "enable": false,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "router-nat-asia-northeast3",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "vm-test-341412",
            "region": "asia-northeast3",
            "router": "router-asia-northeast3",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork",
            "module.router.google_compute_router.this"
          ]
        }
      ]
    }
  ]
}